cmake_minimum_required(VERSION 3.30)
project(advent_of_code)

set(CMAKE_CXX_STANDARD 23)

add_executable(util.test util/util.test.cpp util/util.cpp)
add_executable(BigInt.test util/BigIntTest.cpp util/BigInt.cpp)
add_executable(2023_01 2023/01/2023_01.cpp util/util.cpp)

add_executable(2024_01 2024/01/2024_01.cpp util/util.cpp)
add_executable(2024_02 2024/02/2024_02.cpp util/util.cpp)
add_executable(2024_03 2024/03/2024_03.cpp util/util.cpp)
add_executable(2024_04 2024/04/2024_04.cpp util/util.cpp)
add_executable(2024_05 2024/05/2024_05.cpp util/util.cpp)
add_executable(2024_06 2024/06/2024_06.cpp util/util.cpp)
add_executable(2024_07 2024/07/2024_07.cpp util/util.cpp)
add_executable(2024_08 2024/08/2024_08.cpp util/util.cpp)
add_executable(2024_09 2024/09/2024_09.cpp util/util.cpp)
add_executable(2024_10 2024/10/2024_10.cpp util/util.cpp)
add_executable(2024_11 2024/11/2024_11.cpp util/util.cpp)
add_executable(2024_12 2024/12/2024_12.cpp util/util.cpp)
add_executable(2024_13 2024/13/2024_13.cpp util/util.cpp)
add_executable(2024_14 2024/14/2024_14.cpp util/util.cpp)
add_executable(2024_15 2024/15/2024_15.cpp util/util.cpp)
add_executable(2024_16 2024/16/2024_16.cpp util/util.cpp)
add_executable(2024_17 2024/17/2024_17.cpp util/util.cpp)
add_executable(2024_19 2024/19/2024_19.cpp util/util.cpp util/BigInt.cpp)
add_executable(2024_23 2024/23/2024_23.cpp util/util.cpp)
add_executable(2024_24 2024/24/2024_24.cpp util/util.cpp)
add_executable(2024_25 2024/25/2024_25.cpp util/util.cpp)